...
                  fullWidth
                  style={compactButtonStyle}
                />
              </FooterButtonWrapper>
              <FooterButtonWrapper>
                <Button
                  testID="filter-apply"
                  variant="primary"
                  title={t('filter.apply')}
                  onPress={handleApply}
                  fullWidth
                  style={compactButtonStyle}
                />
...
