...
            />
          </ViewToggleButton>
          <SearchBarWrapper>
            <SearchBar value={searchQuery} onChangeText={setSearchQuery} />
          </SearchBarWrapper>
          <FilterButton
            testID="filter-button"
            active={isFilteringActive}
            onPress={() => setIsFilterModalVisible(true)}
            activeOpacity={0.7}
          >
            <Icon
              name={isFilteringActive ? 'funnel' : 'funnel-outline'}
...
